Fix slider icon squashing and vertical alignment
max-height: 60px conflicted with width: 65%, forcing the browser to
distort the image aspect ratio. Removed max-height so height: auto
can do its job.

align-items: center had no effect because .slider__icons is a Bootstrap
float-based row. Added display: flex and float: none on the column
children so vertical centering actually works.

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -79,7 +79,12 @@ body {
   margin-bottom: 16px;
 
   &__icons {
+    display: flex;
     align-items: center;
+
+    [class*="col-"] {
+      float: none;
+    }
   }
 
   &__icon-col {
@@ -88,7 +93,6 @@ body {
 
   &__icon {
     width: 65%;
-    max-height: 60px;
     height: auto;
   }
 
